[gd_scene load_steps=8 format=3 uid="uid://c1pipyrj6y3ob"]

[ext_resource type="Script" path="res://scenes/box.gd" id="1_enl2s"]
[ext_resource type="Texture2D" uid="uid://bvahu4csjjyrv" path="res://sprites/Box.png" id="1_vlee1"]
[ext_resource type="Script" path="res://scenes/area.gd" id="3_85odq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_shgpc"]
size = Vector2(78, 78)

[sub_resource type="Animation" id="Animation_jrpc4"]
resource_name = "fade_in"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AreaRight/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.375, 0.375), Vector2(0.25, 0.25), Vector2(0.375, 0.375), Vector2(0.35, 0.35), Vector2(0.375, 0.375)]
}

[sub_resource type="Animation" id="Animation_r3e05"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AreaRight/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.375, 0.375)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_anaoi"]
_data = {
"RESET": SubResource("Animation_r3e05"),
"fade_in": SubResource("Animation_jrpc4")
}

[node name="Box" type="CharacterBody2D"]
position = Vector2(484, 318)
collision_mask = 6
script = ExtResource("1_enl2s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_shgpc")

[node name="AreaUp" type="Area2D" parent="."]
script = ExtResource("3_85odq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaUp"]
polygon = PackedVector2Array(-13, -13, -40, -40, 40, -40, 0, 0)

[node name="AreaLeft" type="Area2D" parent="."]
script = ExtResource("3_85odq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaLeft"]
polygon = PackedVector2Array(0, 0, -40, -40, -40, 40)

[node name="AreaDown" type="Area2D" parent="."]
script = ExtResource("3_85odq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaDown"]
polygon = PackedVector2Array(0, 0, -40, 40, 40, 40)

[node name="AreaRight" type="Area2D" parent="."]
script = ExtResource("3_85odq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaRight"]
polygon = PackedVector2Array(0, 0, 40, -40, 40, 40)

[node name="Sprite2D" type="Sprite2D" parent="AreaRight"]
scale = Vector2(0.375, 0.375)
texture = ExtResource("1_vlee1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_anaoi")
}

[connection signal="input_event" from="AreaUp" to="AreaUp" method="_on_input_event"]
[connection signal="input_event" from="AreaLeft" to="AreaLeft" method="_on_input_event"]
[connection signal="input_event" from="AreaDown" to="AreaDown" method="_on_input_event"]
[connection signal="input_event" from="AreaRight" to="AreaRight" method="_on_input_event"]
